--- a/logout/templates/logout/fail.html
+++ b/logout/templates/logout/fail.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title></title>
+    <meta name="viewport" content="height=device-height, initial-scale=1">
 
     <!-- external links for typefaces -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
