--- a/login/templates/login/admin_login.html
+++ b/login/templates/login/admin_login.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title></title>
+    <meta name="viewport" content="height=device-height, initial-scale=1">
 
     <!-- external links for typefaces -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
@@ -16,7 +17,6 @@
     <link href="{% static 'login/css/components/landing.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'login/css/components/landing-form.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'login/css/components/landing-logos.css' %}" rel="stylesheet" type="text/css"/>
-
 </head>
 <body>
 <img src="{% static 'login/assets/png/uxsoc-logo.png' %}" id="uxsoc-logo"/>
