--- a/sysadmin/templates/sysadmin/admin-poll.html
+++ b/sysadmin/templates/sysadmin/admin-poll.html
@@ -18,8 +18,8 @@
     <a href="{% url 'sysadmin:officers' %}">Comelec Officers</a>
     <a href="{% url 'sysadmin:units' %}">Units</a>
     <a href="{% url 'sysadmin:positions' %}">Positions</a>
-    <a href="{% url 'sysadmin:issues' %}" id="selected">Issues</a>
-    <a href="{% url 'sysadmin:polls' %}">Polls</a>
+    <a href="{% url 'sysadmin:issues' %}">Issues</a>
+    <a href="{% url 'sysadmin:polls' %}" id="selected">Polls</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
@@ -30,21 +30,21 @@
 
 <!-- TABS BUTTONS TO TRAVERSE THE DIFF SECTIONS -->
 <div id="tab-buttons-container">
-    <button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all issues</button>
-    <button class="tab-buttons" onclick="openTab(event, 'Add')" id="tab-add">Add an issue</button>
+    <button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all polls</button>
+    <button class="tab-buttons" onclick="openTab(event, 'Add')" id="tab-add">Add a poll</button>
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
     <form action="" id="tab-search">
-        <input id="search" type="text" name="query" placeholder="Search for an issue">
+        <input id="search" type="text" name="query" placeholder="Search for a poll">
     </form>
 
     <!-- DESELECT-DELETE -->
     <!--<div id="deselect-delete">
         <button id="deselect">Deselect All</button>-->
-    <form action="" id="delete-issues" method="POST">
+    <form action="" id="delete-polls" method="POST">
         {% csrf_token %}
-        <input type="hidden" name="form-type" value="delete-issue">
-        <button type="button" onclick="delete_issues()" id="delete">Delete Selected Issues(s)</button>
+        <input type="hidden" name="form-type" value="delete-polls">
+        <button type="button" onclick="delete_polls()" id="delete">Delete Selected Poll(s)</button>
     </form>
     <!--</div>-->
 </div>
@@ -64,30 +64,30 @@
             <!-- FIRST ROW IS HEADER/TITLE ROW. -->
             <div class="table-row row-0">
                 <div class="col-checkbox"><input type="checkbox" id="toggle-all" onclick="toggle(this)"></div>
-                <div class="col-name">Issue</div>
+                <div class="col-name">Poll</div>
             </div>
 
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
-            {% for issue in issues %}
+            {% for poll in polls %}
                 <div class="table-row {% cycle 'row-1' 'row-2' %}">
-                    <div class="col-checkbox"><input type="checkbox" name="check" value="{{ issue.id }}"
+                    <div class="col-checkbox"><input type="checkbox" name="check" value="{{ poll.id }}"
                                                      onclick="selected(this)"></div>
-                    <div class="col-name">{{ issue.name }}</div>
+                    <div class="col-name">{{ poll.name }}</div>
                 </div>
             {% endfor %}
         </div>
 
         <div class="pagination">
             <span class="step-links">
-                {% if issues.has_previous %}
+                {% if polls.has_previous %}
                     <a href="?page=1{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">&laquo; first</a>
-                    <a href="?page={{ issues.previous_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">previous</a>
+                    <a href="?page={{ polls.previous_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">previous</a>
                 {% endif %}
-                <span class="current">Page {{ issues.number }} of {{ issues.paginator.num_pages }}.</span>
+                <span class="current">Page {{ polls.number }} of {{ polls.paginator.num_pages }}.</span>
 
-                {% if issues.has_next %}
-                    <a href="?page={{ issues.next_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">next</a>
-                    <a href="?page={{ issues.paginator.num_pages }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">last &raquo;</a>
+                {% if polls.has_next %}
+                    <a href="?page={{ polls.next_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">next</a>
+                    <a href="?page={{ polls.paginator.num_pages }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">last &raquo;</a>
                 {% endif %}
             </span>
         </div>
@@ -98,9 +98,9 @@
 
         <div class="info-fields-container">
             {% csrf_token %}
-            <input type="hidden" name="form-type" value="add-issue">
-            {% if issue_form %}
-                {% for field in issue_form %}
+            <input type="hidden" name="form-type" value="add-poll">
+            {% if poll_form %}
+                {% for field in poll_form %}
                     <div class="info-container">
                         <div class="info-label">{{ field.label }}</div>
                         {{ field }}
@@ -111,7 +111,7 @@
 
         <div class="info-buttons-container">
             <!-- SUBMIT BUTTON FOR THE TAB -->
-            <input class="button confirm" type="submit" value="Add new issue">
+            <input class="button confirm" type="submit" value="Add new poll">
         </div>
     </form>
 
