--- a/sysadmin/templates/sysadmin/admin-unit.html
+++ b/sysadmin/templates/sysadmin/admin-unit.html
@@ -19,6 +19,7 @@
     <a href="{% url 'sysadmin:units' %}" id="selected">Units</a>
     <a href="{% url 'sysadmin:positions' %}">Positions</a>
     <a href="{% url 'sysadmin:issues' %}">Issues</a>
+    <a href="{% url 'sysadmin:polls' %}">Polls</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
