Added poll results to archive

--- a/passcode/templates/passcode/officer-results.html
+++ b/passcode/templates/passcode/officer-results.html
@@ -33,7 +33,7 @@
     <button class="tab-buttons" onclick="openTab(event, 'Overview')" id="tab-overview">Overview of votes</button>
     <button class="tab-buttons" onclick="openTab(event, 'Underview')" id="tab-underview">Election results</button>
     <button class="tab-buttons" onclick="openTab(event, 'Poll')" id="tab-poll">Poll results</button>
-    <button class="tab-buttons" onclick="openTab(event, 'Archive')" id="tab-archive">Archive election results</button>
+    <button class="tab-buttons" onclick="openTab(event, 'Archive')" id="tab-archive">Archive all results</button>
 
 </div>
 
@@ -411,7 +411,7 @@
                     Once you're done viewing the election results, reenter your password and click the
                     <b>archive button</b> to <b>archive</b> <i>all</i> the results to a CSV file. Archiving the
                     results
-                    will also clear <i>all</i> votes, voters, candidates, batch positions, batch units, and issues from
+                    will also clear <i>all</i> votes, voters, candidates, batch positions, batch units, issues, and polls from
                     this website.
                 </div>
                 <div class="controls">
