--- a/vote/templates/vote/voting.html
+++ b/vote/templates/vote/voting.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load honeypot %}
 <!DOCTYPE html>
 <html>
 
@@ -55,6 +56,7 @@
         </div>
         <div id="candidates-column">
             <form id="vote" method="POST" action="">
+                {% render_honeypot_field "poll-answer" %}
                 {% csrf_token %}
                 {% if polls %}
                 <div class="candidate-category">
