--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -54,6 +54,8 @@
                     <input required="required" type="text" name="password" id="passcode" />
                     <label for="passcode">passcode</label>
                 </div>
+                <script src='https://www.google.com/recaptcha/api.js'></script>
+                <div class="g-recaptcha input-field" data-sitekey="6Lfp1dwZAAAAANF5VgfIOe4mFriD8-X-DrYeFdf2"></div>
                 <div class="input-field">
                     <button class="submit-btn" type="submit">Vote</button>
                 </div>
