--- a/login/static/login/css/components/landing.css
+++ b/login/static/login/css/components/landing.css
@@ -85,16 +85,16 @@ body::after {
     position: relative;
 }
 
-@media screen and (max-height: 800px){
+@media screen and (max-height: 900px){
     body {
         height: 100vh;
-        overflow-y: hidden;
+        overflow-y: scroll;
     }
 
     #landing-child {
         height: 60%;
         margin-top: 15vh;
-        min-height: 480px;
+        min-height: 540px;
     }
 }
 
