--- a/login/templates/login/admin_login.html
+++ b/login/templates/login/admin_login.html
@@ -48,7 +48,7 @@
                 <label for="passcode">password</label>
             </div>
             <script src='https://www.google.com/recaptcha/api.js'></script>
-            <div class="g-recaptcha" data-sitekey="6Lfp1dwZAAAAANF5VgfIOe4mFriD8-X-DrYeFdf2"></div>
+            <div class="g-recaptcha input-field" data-sitekey="6Lfp1dwZAAAAANF5VgfIOe4mFriD8-X-DrYeFdf2"></div>
             <input type="submit" hidden="hidden"/>
         </form>
 
