--- a/sysadmin/templates/sysadmin/admin-elections.html
+++ b/sysadmin/templates/sysadmin/admin-elections.html
@@ -30,6 +30,12 @@
     </div>
 </div>
 
+<!-- TABS BUTTONS TO TRAVERSE THE DIFF SECTIONS -->
+<div id="tab-buttons-container">
+    <button class="tab-buttons" onclick="openTab(event, 'Controls')" id="tab-controls">Voters</button>
+    <button class="tab-buttons" onclick="openTab(event, 'Archive')" id="tab-archive">Archive all results</button>
+</div>
+
 <!-- CONTAINER WHERE TABS WILL OCCUPY -->
 <div id="tab-container">
     <div style="margin-top: 100px;">
@@ -42,65 +48,102 @@
         </div>
     {% endif %}
 
-    <div class="controls-container">
-        <form action="" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="form-type"
-                    value="{% if election_ongoing is False %}start-elections{% else %}end-elections{% endif %}">
+    <div id="Controls" class="tab-content">
+        <div class="controls-container">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="form-type"
+                        value="{% if election_ongoing is False %}start-elections{% else %}end-elections{% endif %}">
 
-            {% for college in colleges %}
-                <div class="controls-header">
-                    {{ college.name }}
-                </div>
-                <div class="controls">
-                    {% if election_ongoing is False %}
-                        {% for batch in batches %}
-                            <li class="batch-checkboxes">
-                                <input id="{{ college.name }}-{{ batch }}" name="{{ college.name }}-batch"
-                                        type="checkbox" value="{{ batch }}">
-                                <label for="{{ college.name }}-{{ batch }}">{{ batch }}</label>
-                            </li>
-                        {% endfor %}
-                    {% else %}
-                        <b>Batches eligible for this college:</b>
-                        {% for college_key, batch_val in college_batch_dict.items %}
-                            {% if college_key == college.name %}
-                                {% for batch in batch_val %}
-                                    <li class="batch-checkboxes">
-                                        {{ batch }}{% if not forloop.last %},{% endif %}</li>
-                                {% endfor %}
-                            {% else %}
-                                {% if college.name not in college_batch_dict.keys and forloop.last %}
-                                    <li class="batch-checkboxes">None.</li>
+                {% for college in colleges %}
+                    <div class="controls-header">
+                        {{ college.name }}
+                    </div>
+                    <div class="controls">
+                        {% if election_ongoing is False %}
+                            {% for batch in batches %}
+                                <li class="batch-checkboxes">
+                                    <input id="{{ college.name }}-{{ batch }}" name="{{ college.name }}-batch"
+                                            type="checkbox" value="{{ batch }}">
+                                    <label for="{{ college.name }}-{{ batch }}">{{ batch }}</label>
+                                </li>
+                            {% endfor %}
+                        {% else %}
+                            <b>Batches eligible for this college:</b>
+                            {% for college_key, batch_val in college_batch_dict.items %}
+                                {% if college_key == college.name %}
+                                    {% for batch in batch_val %}
+                                        <li class="batch-checkboxes">
+                                            {{ batch }}{% if not forloop.last %},{% endif %}</li>
+                                    {% endfor %}
+                                {% else %}
+                                    {% if college.name not in college_batch_dict.keys and forloop.last %}
+                                        <li class="batch-checkboxes">None.</li>
+                                    {% endif %}
                                 {% endif %}
-                            {% endif %}
-                        {% endfor %}
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                {% endfor %}
+                <div class="controls-instruction">
+                    {% if election_ongoing is False %}
+                        Once you're done, <b>reenter your password</b>, then click the <b>start
+                        elections</b> button to commence the elections.
+                        <br>
+                    {% else %}
+                        Reenter your password, then click the <b>stop elections</b> button to end the elections.
+                        Only stop the elections when you're sure that you will, because this cannot be undone.
                     {% endif %}
                 </div>
-            {% endfor %}
-            <div class="controls-instruction">
-                {% if election_ongoing is False %}
-                    Once you're done, <b>reenter your password</b>, then click the <b>start
-                    elections</b> button to commence the elections.
+                <div class="controls">
+                    <label class="info-label" for="reauth">Reenter your password</label>
                     <br>
-                {% else %}
-                    Reenter your password, then click the <b>stop elections</b> button to end the elections.
-                    Only stop the elections when you're sure that you will, because this cannot be undone.
-                {% endif %}
-            </div>
-            <div class="controls">
-                <label class="info-label" for="reauth">Reenter your password</label>
-                <br>
-                <input id="reauth" class="password-reauth" type="password" name="reauth" required="required">
-                <br>
-                <input class="button {% if election_ongoing is False %}confirm{% else %}confirm-negative{% endif %}"
-                        type="submit"
-                        value="{% if election_ongoing is False %}Start elections{% else %}Stop elections{% endif %}">
-            </div>
-        </form>
+                    <input id="reauth" class="password-reauth" type="password" name="reauth" required="required">
+                    <br>
+                    <input class="button {% if election_ongoing is False %}confirm{% else %}confirm-negative{% endif %}"
+                            type="submit"
+                            value="{% if election_ongoing is False %}Start elections{% else %}Stop elections{% endif %}">
+                </div>
+            </form>
+        </div>
+        <div id="logo">
+            <img width=500 height=50 src="{% static 'passcode/assets/svg/org-logos.svg' %}">
+        </div>
     </div>
-    <div id="logo">
-        <img width=500 height=50 src="{% static 'passcode/assets/svg/org-logos.svg' %}">
+
+    <div id="Archive" class="tab-content" style="display: none">
+        {% if election_ongoing is True %}
+            <img id="stop" src="{% static 'passcode/assets/svg/stop.svg' %}">
+            <header>Woah there!</header>
+            <div class="prohibited">
+                You may not archive any results until the elections are done.
+            </div>
+        {% else %}
+            <form method="POST" action="">
+                {% csrf_token %}
+                <input type="hidden" name="form-type" value="archive">
+                <div class="controls-instruction">
+                    Once you're done viewing the election results, reenter your password and click the
+                    <b>archive button</b> to <b>archive</b> <i>all</i> the results to a CSV file. Archiving the
+                    results
+                    will also clear <i>all</i> votes, voters, candidates, batch positions, batch units, issues, and polls from
+                    this website.
+                </div>
+                <div class="controls">
+                    <label class="info-label" for="reauth-archive">Reenter your password</label>
+                    <br>
+                    <input id="reauth-archive" class="password-reauth" type="password" name="reauth-archive"
+                           required="required">
+                    <br>
+                    <input class="button {% if election_ongoing is False %}confirm{% else %}confirm-negative{% endif %}"
+                           type="submit" value="Archive election results">
+                </div>
+            </form>
+        {% endif %}
+
+        <div id="logo">
+            <img width=500 height=50 src="{% static 'passcode/assets/svg/org-logos.svg' %}">
+        </div>
     </div>
 </div>
 
